substrate/frame/support/test/tests/construct_runtime_v2_ui/runtime_struct.stderr
error: Invalid frame::runtime, expected struct definition
  --> tests/construct_runtime_v2_ui/runtime_struct.rs:21:5
   |
21 |     pub enum Runtime {}
   |     ^^^
